<resources>
    <string name="app_name">Key</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_name">Tap Me</string>
    <string name="saved_button_press_count_key">0</string>
    <string name="current_score">Start Game for high score</string>
    <string name="high_score">High Score: </string>
    <string name="timer">Tap START to Start Game</string>
    <string name="saved_button_press_count_key_dash">0</string>
    <string name="button_start">START</string>
    <string name="high_score_for_game">High Score</string>
</resources>
